<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModelDetailTv"
            type="com.blogsetyaaji.moviecatalogue.ui.detailtv.DetailTvViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.detailtv.DetailtvActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bg_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@{viewModelDetailTv.data.data.name}"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/overlay_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/purple_opacity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/constrain_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/container_detail_margin"
                android:background="@drawable/detail_bg"
                android:transitionName="container_transition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_desc_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@{viewModelDetailTv.data.data.overview}"
                android:textSize="@dimen/overview_detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/rubik_bold"
                android:text="@string/storyline"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/width_detail_img"
                android:layout_height="@dimen/height_detail_img"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="150dp"
                android:transitionName="img_tv_trasition"
                app:cardCornerRadius="@dimen/card_detail_radius"
                app:cardElevation="@dimen/card_detail_elevation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_detail_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@{viewModelDetailTv.data.data.name}"
                    android:scaleType="centerCrop"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/text_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="@font/rubik_bold"
                android:maxLines="3"
                android:singleLine="false"
                android:textAlignment="textStart"
                android:textSize="@dimen/title_detail"
                android:textStyle="bold"
                android:transitionName="title_tv_transition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/constrain_detail" />

            <RatingBar
                android:id="@+id/rating_detail_tv"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/view_margin"
                android:numStars="5"
                android:transitionName="rating_tv_transition"
                app:layout_constraintStart_toStartOf="@+id/text_name_tv"
                app:layout_constraintTop_toBottomOf="@+id/text_name_tv" />

            <TextView
                android:id="@+id/vote_detail_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/view_margin"
                android:fontFamily="@font/rubik_bold"
                android:textSize="@dimen/vote_detail"
                android:textStyle="bold"
                app:doubleToString="@{viewModelDetailTv.data.data.voteAverage}"
                app:layout_constraintBottom_toBottomOf="@+id/rating_detail_tv"
                app:layout_constraintStart_toEndOf="@+id/rating_detail_tv"
                app:layout_constraintTop_toTopOf="@+id/rating_detail_tv" />

            <ImageButton
                android:id="@+id/detail_tv_back"
                android:layout_width="@dimen/share_detail"
                android:layout_height="@dimen/share_detail"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/margin_top_acton"
                android:background="@drawable/back_bg"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/detail_tv_share"
                android:layout_width="@dimen/share_detail"
                android:layout_height="@dimen/share_detail"
                android:layout_marginTop="@dimen/margin_top_acton"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@drawable/back_bg"
                android:contentDescription="@string/back_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_share" />

            <ImageButton
                android:id="@+id/detail_tv_favorite"
                android:layout_width="@dimen/share_detail"
                android:layout_height="@dimen/share_detail"
                android:layout_marginTop="@dimen/margin_top_acton"
                android:layout_marginEnd="16dp"
                android:background="@drawable/back_bg"
                android:contentDescription="@string/back_button"
                app:layout_constraintEnd_toStartOf="@+id/detail_tv_share"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_favorite_unselected" />

            <ProgressBar
                android:id="@+id/pg_detail_tv"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constrain_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>