<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movie</string>
    <string name="tv">TV</string>
    <string name="desc_movie">Movie description</string>
    <string name="storyline">Storyline</string>
    <string name="back_button">Back Button</string>
    <string name="error">Error occurred</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait</string>
</resources>